--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "keypress": "^0.2.1",
+    "moment": "^2.22.2",
     "readline": "^1.3.0",
     "socket.io-client": "^2.1.1"
   }
